--- a/.github/workflows/delete.yml
+++ b/.github/workflows/delete.yml
@@ -43,7 +43,9 @@ jobs:
       runs-on: ubuntu-latest
       needs: fetch-tag-step
       environment: ${{ needs.fetch-tag-step.outputs.tag }}
+      if: ${{ github.event.release.tag_name > needs.fetch-tag-step.outputs.tag }}
       steps: 
         - name: Display release deletion event information
           run: |
             echo "Release Deleted: ${{ github.event.release.tag_name }}"
+            echo "latest tag: ${{ needs.fetch-tag-step.outputs.tag }}"
