--- a/.github/workflows/delete.yml
+++ b/.github/workflows/delete.yml
@@ -49,3 +49,4 @@ jobs:
           run: |
             echo "Release Deleted: ${{ github.event.release.tag_name }}"
             echo "latest tag: ${{ needs.fetch-tag-step.outputs.tag }}"
+            echo "Release Action: ${{ github.event.action }}"
